--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-flag-icon-css": "^1.0.25",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1"
   },
